add_executable(merlion_tsdb_tests
    smoke_test.cpp
    encoding/varint_test.cpp
    encoding/bstream_test.cpp
    encoding/crc32c_test.cpp
    chunkenc/xor_test.cpp
    wal/page_test.cpp
    wal/segment_writer_test.cpp
    wal/segment_reader_test.cpp
    wal/record_test.cpp
    model/labels_test.cpp
    head/mem_series_test.cpp
    head/series_store_test.cpp
    head/head_test.cpp
    head/head_replay_test.cpp
    block/meta_test.cpp
    block/chunks_test.cpp
    block/index_test.cpp
    block/postings_test.cpp
    block/series_test.cpp
    block/block_test.cpp
    block/index_writer_test.cpp
    block/block_writer_test.cpp
)
target_link_libraries(merlion_tsdb_tests PRIVATE
    merlion_tsdb_core
    GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(merlion_tsdb_tests)
